@@ -5,12 +5,12 @@ AM_CFLAGS =		     \
 	$(XGLMODULES_CFLAGS) \
 	-I$(top_srcdir)/hw/xgl 
 
-libglx_la_LDFLAGS = -avoid-version
-libglx_la_SOURCES = glxmodule.c
-libglx_la_LIBADD  = $(top_builddir)/GL/glx/libglx.la \
-		    $(top_builddir)/GL/mesa/libGLcore.la
-libglx_modules    = libglx.la
+libglxext_la_LDFLAGS = -avoid-version
+libglxext_la_SOURCES = glxmodule.c
+libglxext_la_LIBADD  = $(top_builddir)/GL/glx/libglx.la \
+		       $(top_builddir)/GL/mesa/libGLcore.la
+libglxext_modules    = libglxext.la
 
 moduledir = @XGL_MODULE_PATH@
 
-module_LTLIBRARIES = $(libglx_modules)
+module_LTLIBRARIES = $(libglxext_modules)
